# health-companion

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  ROADMAP.md
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/src/api/: __init__.py  config.py  main.py
apps/api/src/api/agents/: __init__.py  managed.py  runner.py  tools.py
apps/api/src/api/agents/prompts/: __init__.py  consultation_prep.py  health_companion.py  lab_analyzer.py  onboarding.py  post_consultation.py
apps/api/src/api/models/: __init__.py  base.py
apps/api/src/api/routers/: chat.py  demo.py  health.py  labs.py  simulate.py  simulate_managed.py  trends.py
apps/api/src/api/schemas/: consultation.py  lab.py  profile.py
apps/api/src/api/services/: __init__.py
apps/web/: next.config.ts  package-lock.json  package.json  vercel.json
docs/: agents.md  architecture.md  bitacora-desarrollo.md  clinical-audit-checklist.md  demo-script.md  development-journal.md  hackathon-brief-for-claude-code-v1.md  hackathon-plan.md  managed-agents.md  product-horizon.md  submission-draft.md  tesis-del-fundador-v1.md
docs/assets/: three-users.html
docs/process/: README.md  clinical-audit-crossref.md  competitive-analysis-v1.md  concept-v1.md  demo-script.md  development-journal.md  expected-takes-jm.md  hans-first-look.md  recording-cheat-sheet.md  (+4 more)
fixtures/: README.md  make_lab_pdf.py
scripts/: demo-preflight.sh
video/: Guion.rtf  README.md  demo-script.md  guion eleven labs.txt  guion grabado.txt  recording-cheat-sheet.md  submission-draft.md
(+40 files in other folders)
